# PickyRobotics

./: README.md
Operator/: README.md
Operator/Receiver/: CSSPhase1Simplified.css  HTMLPhase1Simplified.html
Operator/Receiver/scripts/: UI.js  gamepadHandler.js  main.js
Operator/Sender/: main.py  robot_controller.py  webrtc_manager.py  websocket_client.py
Orin/: README.md
Orin/catkin_ws/: .rosinstall.bak
Orin/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Orin/catkin_ws/devel/lib/: libgeometric_shapes.so.0.7.5  libsrdfdom.so.0.6.4
Orin/catkin_ws/src/picky_arm_demo/: CMakeLists.txt
Orin/catkin_ws/src/picky_arm_demo/launch/: arm_control.launch  arm_motion_planning_collision_avoidance_moveit.launch  arm_motion_planning_collision_avoidance_realsense_clicked_moveit.launch  arm_motion_planning_collision_avoidance_realsense_moveit.launch  arm_motion_planning_moveit.launch
Orin/catkin_ws/src/picky_arm_demo/src/: arm_motion_planning_collision_avoidance_realsense_clicked_moveit.cpp  arm_motion_planning_collision_avoidance_realsense_moveit.cpp  arm_motion_planning_moveit.cpp
Robot/: Fallback.py  MergedEnhancements.py  RobotClientNode.py  RobotGripper_ClientNode.py  RobotManual_JoyStick.py  RobotSuction_ClientNode.py  SeparateWebRTC1_ArmGripper.py  SeparateWebRTC1_ArmSuction.py  ViewChanges.py  arm_gripper_joystick.py  arm_gripper_joystick_no_websocket.py  arm_suction_joystick.py  my_sendCoord.py  mycobot_connection.py  port_setup.py  receivefromwebsocket.py  setup_gpio.sh  usb permission denied
Robot/picky/devel/: .catkin  _setup_util.py  local_setup.sh
Robot/picky/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
Robot/picky/devel_isolated/ar_track_alvar/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/ar_track_alvar_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
Robot/picky/devel_isolated/aws_robomaker_small_warehouse_world/: .catkin  .rosinstall  local_setup.sh  setup.sh
Robot/picky/devel_isolated/dynamixel_sdk/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/dynamixel_sdk_examples/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/gazebo_ros_link_attacher/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/husky_ur3_gazebo/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/husky_ur3_gripper_moveit_config/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/husky_ur3_nav_without_map/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/husky_ur3_navigation/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/ira_laser_tools/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/learning_joy/: .catkin  .rosinstall  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mecharm/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mecharm_communication/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mecharm_moveit/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mecharm_pi/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mecharm_pi_moveit/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/myagv_navigation/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/myagv_odometry/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/myagv_ps2/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/myagv_teleop/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/myagv_urdf/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mybuddy/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mybuddy_communication/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mybuddy_moveit/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mybuddy_socket/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mybuddy_socket_moveit/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mycobot_280/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mycobot_280_moveit/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mycobot_280arduino/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mycobot_280arduino_moveit/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mycobot_280jn/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mycobot_280jn_moveit/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/devel_isolated/mycobot_280pi/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Robot/picky/src/: README.md
Robot/picky/src/learning_joy/: CMakeLists.txt  package.xml  typescript
Robot/picky/src/learning_joy/launch/: arm_joystick_cartesian.launch  arm_joystick_joint.launch  base_arm_gripper_joystick.launch  base_joystick.launch  gripper_joystick.launch
Robot/picky/src/learning_joy/script/: receivefromwebsocket.py
Robot/picky/src/learning_joy/src/: arm_joystick_cartesian.cpp  arm_joystick_joint.cpp  base_joystick.cpp  gripper_joystick.cpp
Robot/picky/src/picky_arm_demo/: CMakeLists.txt  package.xml
Robot/picky/src/picky_arm_demo/src/: arm_control.cpp  arm_motion_planning_collision_avoidance_realsense_moveit.cpp
(+1349 files in other folders)
